--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
 table{
     border-collapse: collapse;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
+}
+td{
+    border: 1px solid black;
+    padding: 5px;
+}
+th{
+    border: 1px solid black;
+    padding: 5px;
+    text-align: left;
 }
